--- a/event-app/src/admin.css
+++ b/event-app/src/admin.css
@@ -5,7 +5,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600;700&display=swap');
 
 
-.container {
+.main_container {
   width: 100vw;
   height: 100vh;
   background-color: #0A0C0F;
