--- a/event-app/src/user.css
+++ b/event-app/src/user.css
@@ -1,7 +1,4 @@
 .main_container {
-  width: 100vw;
-  height: 100vh;
-  background-color: #0A0C0F;
   display : flex ;
   flex-direction: column ;
   gap: 24px;
@@ -12,9 +9,8 @@
     justify-content: end;
     align-items: center;
     gap: 47px;
-    margin-top: 42px;
-    margin-left: 94px;
-    margin-right: 94px;
+    padding: 48px 80px;
+ 
 
     .container_button_left{
       font-family: "Work Sans";
@@ -39,5 +35,107 @@
       transform: scale(1.05);
       transition: 0.2s ease;
       }
+  }
+
+  .container_heading{
+      font-family: "Work Sans";
+      font-weight: 600;
+      font-size: 40px;
+      color: #ffffff;
+      padding: 0px 92px;
+    }
+
+  .container_card{
+    display: flex;
+    flex-direction: column;
+    font-family: "Work Sans";
+    font-weight: 600;
+    font-size: 24px;
+    color: #ffffff;
+    background-color:#2A8CC3;
+    padding: 24px 36px;
+    width: 320px;
+    border-radius: 18px;
+    gap: 8px;
+    margin-top: 42px;
+    margin-left: 94px;
+    margin-right: 94px;
+    .container_card_name{
+      font-family: "Work Sans";
+      font-weight: 750;
+      font-size: 36px;
+      color: #ffffff;
+    }
+    .container_card_desc{
+      font-family: "Work Sans";
+      font-weight: 300;
+      font-size: 20px;
+      color: #ffffff;
+    }
+    .container_card_date{
+      font-family: "Work Sans";
+      font-weight: 600;
+      font-size: 20px;
+      color: #ffffff;
+    }
+    .container_card_location{
+      font-family: "Work Sans";
+      font-weight: 600;
+      font-size: 20px;
+      color: #ffffff;
+    }
+    .container_card_quota{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      .container_card__quota_left{
+      font-family: "Work Sans";
+      font-weight: 600;
+      font-size: 20px;
+      color: #ffffff;
+      }
+      .container_card_quota_num{
+      font-family: "Work Sans";
+      font-weight: 600;
+      font-size: 64px;
+      color: #ffffff;
+      }
+    }
+    .container_card_press{
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      .container_card_aplly{
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      font-family: "Work Sans";
+      font-weight: 600;
+      font-size: 24px;
+      color: #ffffff;
+      background-color:#E46225;
+      padding: 6px 30px;
+      width: fit-content;
+      border-radius: 18px;
+      gap: 8px;
+      cursor: pointer;
+      }
+      .container_card_aplly:hover {
+      background-color: #7E3614; 
+      transform: scale(1.05);
+      transition: 0.2s ease;
+      }
+    }
+    
+  }
+
+  .container_all_card{ 
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    width: 100%;
+    margin-bottom: 40px;
   }
 }
